<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.details.DetailFragment">

    <ImageView
        android:id="@+id/icon_details"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_lock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/type_repository" />

    <TextView
        android:id="@+id/title_details"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        tools:ignore="TextContrastCheck"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:text="@string/title_repository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_details"/>

    <TextView
        android:id="@+id/description_details"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/description_repository"
        app:layout_constraintTop_toBottomOf="@+id/title_details" />

    <ImageView
        android:id="@+id/icon_number_stars"
        android:src="@drawable/ic_star"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_details" />

    <TextView
        android:id="@+id/text_number_stars"
        android:text="@string/stars"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/icon_number_stars"
        app:layout_constraintTop_toBottomOf="@+id/description_details" />

    <ImageView
        android:id="@+id/icon_share"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_share"
        android:layout_marginStart="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share"
        app:layout_constraintStart_toEndOf="@+id/text_number_stars"
        app:layout_constraintTop_toBottomOf="@+id/description_details" />

    <TextView
        android:id="@+id/text_forks"
        android:layout_width="0dp"
        android:text="@string/forks"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_share"
        app:layout_constraintTop_toBottomOf="@+id/description_details" />

    <ViewFlipper
        android:id="@+id/flipper_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_share">

        <ProgressBar
            android:id="@+id/progress_home"
            android:layout_gravity="center"
            app:trackColor="@color/blue_700"
            app:indicatorColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_error_details"
            android:padding="16dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_readme"
            android:text="@string/readme"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_share" />

    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>