<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/icon_repository"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_baseline_lock_open"
            android:contentDescription="@string/type_repository"
            app:layout_constraintBottom_toTopOf="@+id/description_repository"/>

        <TextView
            android:id="@+id/name_repository"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            tools:ignore="TextContrastCheck"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:text="@string/title_repository"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon_repository"
            app:layout_constraintBottom_toTopOf="@+id/description_repository"
            />

        <TextView
            android:id="@+id/description_repository"
            android:layout_width="0dp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/description_repository"
            app:layout_constraintBottom_toTopOf="@+id/language_repository"/>

        <TextView
            android:id="@+id/language_repository"
            android:layout_width="0dp"
            android:text="@string/language"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/collaborators_repository"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/collaborators_repository"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_collaborators"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>