<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.AuthFragment">

    <ImageView
        android:id="@+id/image_logo_home"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:src="@drawable/ic_home"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/text_description_logo_home" />

    <TextView
        android:id="@+id/text_description_home"
        android:textSize="34sp"
        android:gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:textColor="@color/greyDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_description_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo_home" />

    <ViewFlipper
        android:id="@+id/flipper_auth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/web_view"
        app:layout_constraintTop_toBottomOf="@+id/text_description_home">

        <Button
            android:id="@+id/button_login"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_home" />

        <ProgressBar
            android:id="@+id/progress_home"
            android:layout_gravity="center"
            app:trackColor="@color/blue_500"
            app:indicatorColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </ViewFlipper>

    <WebView
        android:id="@+id/web_view"
        android:layout_marginBottom="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>